# picoF

picoF/: CMakeLists.txt  main.c  pico_sdk_import.cmake
picoF/animationA/: animation_a.c
picoF/animationB/: animation_b.c  animation_b.h  frames0.c  frames0.h
picoF/animationC/: animation_c.c  animation_c.h  frames.c  frames.h
picoF/brickout/: brickout.c
picoF/dino/: dino.c  dino.h
picoF/gfx/: gfx.c  gfx.h
picoF/hardware/: hardware_config.h  hardware_init.c  hardware_init.h
picoF/input/: input.c  input.h
picoF/registry/: registry.c  registry.h
picoF/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_compat.h
